--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,40 @@ spring.datasource.password=postgres
 
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
+
+
+#JoinFaces
+
+jsf:
+  PROJECT_STAGE: Development
+  primefaces:
+    theme: overcast
+joinfaces:
+  version: @project.parent.version@
+spring-boot:
+  version: @project.parent.parent.version@
+tomcat:
+  version: @tomcat.version@
+jetty:
+  version: @jetty.version@
+undertow:
+  version: @undertow.version@
+cdi:
+  version: @cdi.version@
+mojarra:
+  version: @javax.faces.version@
+myfaces:
+  version: @myfaces.version@
+omnifaces:
+  version: @omnifaces.version@
+angularfaces:
+  version: @angularfaces.version@
+primefaces:
+  version: @primefaces.version@
+primefaces-extensions:
+  version: @primefaces-extensions.version@
+bootsfaces:
+  version: @bootsfaces.version@
+butterfaces:
+  version: @butterfaces.version@
+
