--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 			<scope>test</scope>
 		</dependency>
 
-	
+	 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        
+        
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework.boot</groupId> -->
 <!-- 			<artifactId>spring-boot-devtools</artifactId> -->
